# thousandeyes-futures

./: .clang-format  .gitignore  CMakeLists.txt  FindThousandEyesFutures.cmake  JENKINS  LICENSE  README.md  conanfile.py
.github/: PULL_REQUEST_TEMPLATE.md
ci/: Job.groovy
examples/: CMakeLists.txt  chaining.cpp  conversion.cpp  executors.cpp  recursive.cpp  sum.cpp  timeout.cpp
include/thousandeyes/futures/: Default.h  DefaultExecutor.h  Executor.h  PollingExecutor.h  PollingExecutorWithPartialSort.h  TimedWaitable.h  Waitable.h  all.h  observe.h  then.h  util.h
include/thousandeyes/futures/detail/: FutureWithChaining.h  FutureWithContainer.h  FutureWithContinuation.h  FutureWithForwarding.h  FutureWithIterators.h  FutureWithTuple.h  InvokerWithNewThread.h  InvokerWithSingleThread.h  ObservedFutureWithContinuation.h  typetraits.h
srctest/: CMakeLists.txt  future.cpp  waitables.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  defaultexecutor.cpp  future.cpp  pollingexecutor.cpp  timedwaitable.cpp  waitable.cpp  waitables.cpp
